applier/build/5pi-home.jsonnet.test-args/home_automation/home_assistant/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "labels":
    "app": "home-assistant"
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": "home-assistant"
  "template":
    "metadata":
      "labels":
        "app": "home-assistant"
    "spec":
      "containers":
      - "args":
        - "python3"
        - "-m"
        - "homeassistant"
        - "--config"
        - "/config"
        "image": "homeassistant/home-assistant:2021.2.0.dev20210126"
        "livenessProbe":
          "httpGet":
            "port": 8123
          "initialDelaySeconds": 600
        "name": "home-assistant"
        "securityContext":
          "privileged": true
        "volumeMounts":
        - "mountPath": "/config"
          "name": "data"
          "readOnly": false
      "hostNetwork": true
      "nodeSelector":
        "kubernetes.io/hostname": "rpi-living"
      "volumes":
      - "hostPath":
          "path": "/data/home-assistant"
        "name": "data"
