applier/build/5pi-home.jsonnet.test-args/home_automation/home_assistant/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "ports":
  - "port": 8123
  "selector":
    "app": "home-assistant"
