applier/build/5pi-home.jsonnet.test-args/home_automation/home_assistant/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "rules":
  - "host": "home.d.42o.de"
    "http":
      "paths":
      - "backend":
          "serviceName": "home-assistant"
          "servicePort": 8123
        "path": "/"
